<resources>
    <string name="app_name">WeekFiveProject</string>
    <string name="design_string">Design by Cronum</string>
    <string name="quantity">Quantity</string>
    <string name="total">$</string>
    <string name="typeA">Soja</string>
    <string name="typeB">Senf</string>
    <string name="typeC">Avocado</string>
    <string name="confirm">Hinzufugen</string>
    <string name="title">Allergene</string>
    <string name="description">Description</string>
    <string name="back_image">Back Image</string>
    <string name="image">Image</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="shopping_icon">Shopping Icon</string>
    <string name="favorite_image">Favorite Image</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="currency">$</string>
</resources>