<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/back_image"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:text="@string/design_string"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/sale_shape"
            android:backgroundTint="@android:color/white"
            android:elevation="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack">

            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/radius_pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:elevation="5dp"
                android:translationZ="5dp"
                app:cardCornerRadius="180dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/activity_item_ivItem"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:contentDescription="@string/image"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/cherry" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_item_tvSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/sale_shape"
                android:backgroundTint="@color/colorSale"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="TextView" />

            <TextView
                android:id="@+id/activity_item_tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="30dp"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvFruit"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tvRatingNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="3,5"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_tvTitle" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.5"
                android:theme="@style/AppThemeRatingBar"
                app:layout_constraintLeft_toRightOf="@id/tvRatingNumber"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_tvTitle" />

            <TextView
                android:id="@+id/tvNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="(72)"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_tvTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/description"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/activity_item_tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDes"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tvQuantityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_item_tvDescription" />

        <LinearLayout
            android:id="@+id/cvQuantity"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sale_shape"
            android:backgroundTint="@android:color/white"
            android:elevation="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantityTitle">

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginEnd="3dp"
                android:adjustViewBounds="true"
                android:background="@drawable/minus_shape"
                android:text="@string/minus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:background="@drawable/add_shape"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/one"
                android:textSize="23sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTypeOfItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvQuantity"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="555dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvFruitTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTypeOfItem"
            app:reverseLayout="false"
            tools:listitem="@layout/fruit_title_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cvConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sale_shape"
            android:backgroundTint="@android:color/black"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcvFruitTitle">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/minus_shape"
                android:backgroundTint="@android:color/black"
                android:drawableStart="@drawable/ic_card_24"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:padding="20dp"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvConfirm"
                tools:text="7.99$" />

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="23dp"
                android:backgroundTint="@android:color/black"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btnConfirm"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/oval_shape"
                android:contentDescription="@string/shopping_icon"
                android:padding="7dp"
                android:src="@drawable/ic_shopping_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tvConfirm"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>